Bug#42015 ndb_mgmd --initial + no config file = hang - Print message saying "trying to fetch config from other node"   every 30 seconds - Improve error message returned when the config is not yet   confirmed - Add test to check that ndb_mgmd can fetch config from another   mgmd using NDB_CONNECTSTRING(or equvivalent)